--- a/view/frontend/templates/component/image_teaser.phtml
+++ b/view/frontend/templates/component/image_teaser.phtml
@@ -5,62 +5,48 @@ $visibility = $block->getVisibilityClass();
 $maxContentWidth = $block->getVar('max_content_width');
 
 $imageTeaser = $block->getData();
-$itemsPerRow = $imageTeaser['currentScenario']['desktopLayout']['id'];
-$itemsPerView = $imageTeaser['currentScenario']['desktopLayout']['id'];
+
+$desktopLayout = $imageTeaser['scenario']['desktopLayout']['id'];
+$mobileLayout = $imageTeaser['scenario']['mobileLayout']['id'];
+
+$teaserWidth = $imageTeaser['scenario']['teaserWidth']['id'];
+
+$itemsPerRow = $desktopLayout;
+$itemsPerView = $itemsPerRow;
 
 $itemsPerRowMobile = 2;
 $itemsPerViewMobile = 1;
-$displayVariant = 'outside';
 
 $isSlider = false;
 $isSliderMobile = false;
 
-if (in_array($imageTeaser['currentScenario']['mobileLayout']['id'], ['large', 'slider', 'col'])) {
+$mix = $block->getMix();
+
+if (in_array($mobileLayout, ['mobile-large', 'mobile-slider', 'mobile-in-columns'])) {
     $itemsPerRowMobile = 1;
 }
 
-if ($itemsPerView == 6) {
-    $itemsPerViewMobile = 3;
-
-    if ($imageTeaser['currentScenario']['mobileLayout']['id'] == '2-2-2') {
-        $itemsPerRowMobile = 2;
-    } else {
-        $itemsPerRowMobile = 3;
-    }
-}
-
-if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'w-s' or $imageTeaser['currentScenario']['teaserWidth']['id'] == 'c-s') {
+if ($teaserWidth == 'window-slider' || $teaserWidth == 'container-slider') {
     $isSlider = true;
 }
 
-if ($imageTeaser['currentScenario']['mobileLayout']['id'] == 'slider') {
+if ($mobileLayout == 'mobile-slider') {
     $isSliderMobile = true;
 }
 
 $componentClasses = $block->getMix();
-
-if ($imageTeaser['currentScenario']['mobileLayout']['id'] == '1-2') {
-    $componentClasses .= ' cs-image-teaser--mobile-cfg-big-small-small';
-}
-
-if ($imageTeaser['currentScenario']['mobileLayout']['id'] == '1-2-1') {
-    $componentClasses .= ' cs-image-teaser--mobile-cfg-big-small-small-big';
-}
-
 $componentClasses .= $block->getSkipSpacing() ? ' cs-image-teaser--skip-spacing' : ''; 
-$componentClasses .= ' ' . $block->getVar('image_teaser/additional_css_classes');
+$componentClasses .= ' ' . $block->getVar('image_teaser_next/additional_css_classes');
 
-if (isset($imageTeaser['currentScenario']['textPositioning']['id']) && $imageTeaser['currentScenario']['textPositioning']['id'] == 'over') {
-    $displayVariant = 'inside';
-}
+$contentPlacement = $imageTeaser['scenario']['contentPlacement']['id'];
 
 $sizesMobile = '(max-width: 48em) 100vw';
 $sizesDesktop = sprintf('%svw', 100 / $itemsPerViewMobile);
 
-if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'w-s') {
+if ($teaserWidth == 'window-slider') {
     $sizesMobile = '(max-width: 48em) 80vw';
     $sizesDesktop = (80 / $itemsPerView) . 'vw';
-} else if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'c') {
+} else if ($teaserWidth == 'container') {
     $sizesDesktop = '(min-width: ' . $maxContentWidth . 'px) ' . ($maxContentWidth / $itemsPerView) . 'px, ' . $sizesDesktop;
 }
 
@@ -68,101 +54,35 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
 ?>
 
 <div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
-    <div class="cs-container cs-container--image-teaser">
-        <?php if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'c' or $imageTeaser['currentScenario']['teaserWidth']['id'] == 'c-s'): ?>
+    <div class="cs-container cs-container--image-teaser<?= ($teaserWidth == 'window' || $teaserWidth == 'window-slider') ? ' cs-container--image-teaser-window-width' : '' ?>">
+        <?php if ($teaserWidth == 'container' or $teaserWidth == 'container-slider'): ?>
         <div class="cs-container__inner">
         <?php endif; ?>
             <div class="cs-image-teaser
              cs-image-teaser--items-in-row-<?= $itemsPerRow ?>
              cs-image-teaser--items-in-row-mobile-<?= $itemsPerViewMobile ?>
              <?= $isSlider ? 'cs-image-teaser--slider' : '' ?>
-             <?= $imageTeaser['currentScenario']['teaserWidth']['id'] == 'w-s' ? 'cs-image-teaser--full-width-slider' : '' ?>
+             <?= $teaserWidth == 'window-slider' ? 'cs-image-teaser--full-width-slider' : '' ?>
              <?= $componentClasses ?>"
                  data-items-per-view="<?= $itemsPerView ?>"
                 <?= $itemsPerViewMobile ? 'data-mobile-items-per-view="' . $itemsPerViewMobile . '"' : '' ?>
                  data-is-slider="<?= $isSlider ?>"
-                 data-mobile-is-slider="<?= $isSliderMobile ?>">
+                 data-mobile-is-slider="<?= $isSliderMobile ?>"
+                 data-layout="<?= $contentPlacement ?>">
 
                 <div class="cs-image-teaser__carousel">
-                    <div class="cs-image-teaser__wrapper cs-image-teaser__wrapper--content-display-<?= $displayVariant ?>">
+                    <div class="cs-image-teaser__wrapper cs-image-teaser__wrapper--content-<?= $contentPlacement ?>">
                         <ul class="cs-image-teaser__slides">
-
                             <?php foreach ($viewModel->getSlides() as $slide): ?>
-                                <li class="cs-image-teaser__slide cs-image-teaser__slide--scheme-<?= $slide->getData('colorScheme') ?> <?= $slide->getSrc() ? 'cs-image-teaser__slide--image-uploaded' : '' ?>">
-                                    <?php if ($slide->getHref()): ?>
-                                    <a href="<?= $slide->getHref() ?>" class="cs-image-teaser__slide-link">
-                                        <?php endif; ?>
-
-                                        <?php
-                                        $imageSrc = $slide->getSrc();
-
-                                        if ($imageSrc and !$slide->isSvg()) {
-                                            $imageSrc = ($isSlider and $isSliderMobile) ? '' : 'data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=';
-                                        }
-                                        ?>
-                                        <?php if ($slide->getSrc()): ?>
-                                            <figure class="cs-image-teaser__figure">
-                                                <img
-                                                        class="cs-image-teaser__image | <?= ($isSlider and $isSliderMobile) ? 'swiper-lazy' : 'lazyload' ?>"
-                                                        src="<?= $imageSrc ?>"
-                                                    <?php if (!$slide->isSvg()): ?> data-src="<?= $slide->getSrc() ?>" <?php endif; ?>
-                                                    <?php if ($slide->getSrcSet() and !$slide->isSvg()): ?>
-                                                        data-srcset="<?= $slide->getSrcSet() ?>"
-                                                    <?php endif; ?>
-                                                        <?php if ($sizes and !$slide->isSvg()): ?>sizes="<?= $sizes ?>"<?php endif; ?>
-                                                        alt="<?= $slide->getAlt() ?>"
-                                                    <?php if ($slide->getWidth()): ?> width="<?= $slide->getWidth() ?>" <?php endif; ?>
-                                                    <?php if ($slide->getHeight()): ?> height="<?= $slide->getHeight() ?>" <?php endif; ?>
-                                                >
-                                                <noscript>
-                                                    <img
-                                                            class="cs-image-teaser__image"
-                                                            src="<?= $slide->getSrc() ?>"
-                                                            <?php if ($slide->getSrcSet()): ?>srcset="<?= $slide->getSrcSet() ?>" <?php endif; ?>
-                                                            <?php if ($sizes): ?>sizes="<?= $sizes ?>"<?php endif; ?>
-                                                            alt="<?= $slide->getAlt() ?>"
-                                                        <?php if ($slide->getWidth()): ?> width="<?= $slide->getWidth() ?>" <?php endif; ?>
-                                                        <?php if ($slide->getHeight()): ?> height="<?= $slide->getHeight() ?>" <?php endif; ?>
-                                                    >
-                                                </noscript>
-                                            </figure>
-                                        <?php endif; ?>
-
-                                        <div class="cs-image-teaser__content-wrapper cs-image-teaser__content-wrapper--content-display-scenario-<?= $slide->getData('displayVariant') ?>">
-                                            <div class="cs-image-teaser__content">
-                                                <?php if ($slide->getHeadline()): ?>
-                                                    <h2 class="cs-image-teaser__headline"><?= $slide->getHeadline() ?></h2>
-                                                <?php endif; ?>
-
-                                                <?php if ($slide->getSubheadline()): ?>
-                                                    <p class="cs-image-teaser__subheadline"><?= $slide->getSubheadline() ?></p>
-                                                <?php endif; ?>
-
-                                                <?php if ($slide->getParagraph()): ?>
-                                                    <p class="cs-image-teaser__text"><?= $slide->getParagraph() ?></p>
-                                                <?php endif; ?>
-
-                                                <?php if ($slide->getHref() and $slide->getData('ctaLabel')): ?>
-                                                    <div class="cs-image-teaser__cta">
-                                                    <span role="button"
-                                                          class="cs-image-teaser__cta-button">
-                                                        <span class="cs-image-teaser__cta-button-span"><?= $slide->getData('ctaLabel') ?></span>
-                                                        <?= $this->getLayout()
-                                                            ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
-                                                            ->setIconUrl($block->getVar('image_teaser/cta_button_icon_path'))
-                                                            ->setCssClass('cs-image-teaser__cta-button-icon')
-                                                            ->setInlined(true)
-                                                            ->toHtml(); 
-                                                        ?>
-                                                    </span>
-                                                    </div>
-                                                <?php endif; ?>
-                                            </div>
-                                        </div>
-                                        <?php if ($slide->getHref()): ?>
-                                    </a>
-                                <?php endif; ?>
-                                </li>
+                                <?= $this->getLayout()
+                                        ->createBlock(\Magento\Framework\View\Element\Template::class)
+                                        ->setTemplate('MageSuite_ContentConstructorFrontend::component/image_teaser/image_teaser_slide.phtml')
+                                        ->setSlide($slide)
+                                        ->setIsSlider($isSlider)
+                                        ->setIsSliderMobile($isSliderMobile)
+                                        ->setContentPlacement($contentPlacement)
+                                        ->toHtml(); 
+                                ?>
                             <?php endforeach; ?>
                         </ul>
                     </div>
@@ -175,6 +95,7 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
                                     ->setIconUrl($block->getVar('image_teaser/navigation/arrows/prev/path'))
                                     ->setCssClass('cs-image-teaser__nav-icon')
                                     ->setInlined(true)
+                                    ->setLazyLoaded(false)
                                     ->toHtml(); 
                             ?>
                         </button>
@@ -185,6 +106,7 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
                                 ->setIconUrl($block->getVar('image_teaser/navigation/arrows/next/path'))
                                 ->setCssClass('cs-image-teaser__nav-icon')
                                 ->setInlined(true)
+                                ->setLazyLoaded(false)
                                 ->toHtml(); 
                             ?>
                         </button>
@@ -195,7 +117,7 @@ $sizes = $sizesMobile . ', ' . $sizesDesktop;
                 <?php if (($isSlider or $isSliderMobile) && $block->getVar('image_teaser/pagination/show')): ?>
                     <ul class="cs-image-teaser__pagination <?= $block->getVar('image_teaser/pagination/additional_css_classes') ?>"></ul>
                 <?php endif; ?>
-                <?php if ($imageTeaser['currentScenario']['teaserWidth']['id'] == 'c' or $imageTeaser['currentScenario']['teaserWidth']['id'] == 'c-s'): ?>
+                <?php if ($teaserWidth == 'container' or $teaserWidth == 'container-slider'): ?>
             </div>
             <?php endif; ?>
         </div>
