--- a/view/frontend/templates/component/icon.phtml
+++ b/view/frontend/templates/component/icon.phtml
@@ -22,5 +22,6 @@ echo $this->getLayout()
     ->createBlock('MageSuite\ContentConstructorFrontend\Block\Component\ImageTeaser')
     ->setData($iconConfiguration)
     ->setMix('cs-image-teaser--icon ' . $block->getMix())
+    ->setContainerMix('cs-container--icon ' . $block->getContainerMix())
     ->toHtml(); 
 ?>
