--- a/view/frontend/templates/component/product_grid.phtml
+++ b/view/frontend/templates/component/product_grid.phtml
@@ -107,3 +107,14 @@ $componentClasses .= ' ' . $block->getVar('product_grid/additional_css_classes')
         </div>
     </div>
 </div>
+<?php if ($block->getVar('ajax_addtocart/enabled', 'Magento_Catalog')): ?>
+    <script type="text/x-magento-init">
+        {
+            "[data-role=tocart-form], .form.map.checkout": {
+                "catalogAddToCart": {
+
+                }
+            }
+        }
+    </script>
+<?php endif; ?>
