--- a/view/frontend/templates/component/product_carousel.phtml
+++ b/view/frontend/templates/component/product_carousel.phtml
@@ -10,17 +10,21 @@ $navIconNextPath = $block->getVar('product_carousel/navigation/arrows/next/path'
 
 $componentClasses = $block->getSkipSpacing() ? ' cs-products-carousel--skip-spacing' : ''; 
 $componentClasses .= ' ' . $block->getVar('product_carousel/additional_css_classes');
+
+$viewMode = $block->getData('view_mode');
+$isList = $viewMode == 'list' ? true : false;
+$isSliderMobile = $block->getData('carousel_on_mobile');
 ?>
 
 <div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--products-carousel">
         <div class="cs-container__inner">
-            <div class="cs-products-carousel<?= $componentClasses ?>">
+            <div class="cs-products-carousel<?= $componentClasses ?>" data-mobile-is-slider="<?= $isSliderMobile; ?>" data-view-mode=<?= $viewMode; ?>>
                 <div class="cs-products-carousel__carousel">
                     <div class="cs-products-carousel__wrapper">
-                        <ul class="cs-products-carousel__slides">
+                        <ul class="<?php if ($isList): ?>cs-products-list <?php endif; ?><?php if ($isSliderMobile == 'true'): ?>cs-products-list--carousel <?php endif; ?>cs-products-carousel__slides">
                             <?php foreach ($viewModel->getProducts() as $product): ?>
-                                <li class="cs-products-carousel__slide">
+                                <li class="<?php if ($isList): ?>cs-products-list__item <?php endif; ?>cs-products-carousel__slide">
                                     <div class="cs-products-carousel__product-tile">
                                         <?= $viewModel->renderProductTile($product, null) ?>
                                     </div>
@@ -29,7 +33,7 @@ $componentClasses .= ' ' . $block->getVar('product_carousel/additional_css_class
                         </ul>
                     </div>
 
-                    <?php if ($block->getVar('product_carousel/navigation/show')): ?>
+                    <?php if (($viewMode == 'grid' or $isSliderMobile) && $block->getVar('product_carousel/navigation/show')): ?>
                         <button class="cs-products-carousel__nav cs-products-carousel__nav--prev <?= $block->getVar('product_carousel/navigation/arrows/prev/additional_css_classes') ?>" type="button">
                             <?= $this->getLayout()
                                 ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
@@ -50,7 +54,7 @@ $componentClasses .= ' ' . $block->getVar('product_carousel/additional_css_class
                         </button>
                     <?php endif; ?>
 
-                    <?php if ($block->getVar('product_carousel/pagination/show')): ?>
+                    <?php if (($viewMode == 'grid' or $isSliderMobile) && $block->getVar('product_carousel/pagination/show')): ?>
                         <ul class="cs-products-carousel__pagination <?= $block->getVar('product_carousel/pagination/additional_css_classes') ?>"></ul>
                     <?php endif; ?>
                 </div>
